--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -3,12 +3,54 @@
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
-    <h1>Welcome to your new Wagtail site!</h1>
-
-    <p>You can access the admin interface <a href="{% url 'wagtailadmin_home' %}">here</a> (make sure you have run "./manage.py createsuperuser" in the console first).</p>
-
-    <p>If you haven't already given the documentation a read, head over to <a href="http://docs.wagtail.io/">http://docs.wagtail.io</a> to start building on Wagtail</p>
+    <div class="row">
     {% for wc in wc_detail %}
-    <p>{{ wc.workcenter }}</p>
+        <div class="col s12 m6">
+          <div class="card blue-grey darken-1">
+            <div class="card-content white-text">
+              <span class="card-title">{{ wc.workcenter }} - {{ wc.description }}</span>
+
+              <script type="text/javascript">
+                  google.charts.load('current', {'packages':['corechart']});
+                  google.charts.setOnLoadCallback(drawVisualization);
+
+
+                  function drawVisualization() {
+                    // Some raw data (not necessarily accurate)
+                    var data = google.visualization.arrayToDataTable([
+                     ['Month', 'Percent'],
+                     ['Performance',  80],
+                     ['Availability',  75],
+                     ['Quality',  95],
+                     ['Overall',  57],
+                    ]);
+
+                    var options = {
+                      title : 'P A Q O - {{wc.description}}',
+                      vAxis: {
+                          title: '%',
+                          viewWindow: {
+                              min: 0,
+                              max: 100
+                          },
+                      },
+                      seriesType: 'bars',
+                      series: {1: {type: 'line'}}
+                    };
+
+                    var chart = new google.visualization.ComboChart(document.getElementById('{{ wc.workcenter }}'));
+                    chart.draw(data, options);
+                    }
+            </script>
+
+              <div id="{{ wc.workcenter }}" style="width: 550px; height: 280px;"></div>
+            </div>
+            <div class="card-action">
+              <a href="#">80/20 Data</a>
+              <a href="#">OEE Trends</a>
+            </div>
+          </div>
+        </div>
     {% endfor %}
+    </div>
 {% endblock %}
