--- a/oee/templates/base.html
+++ b/oee/templates/base.html
@@ -1,5 +1,6 @@
 {% load static wagtailuserbar %}
 
+
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -32,11 +33,15 @@
 
 
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-        
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+
+        {% include 'material/includes/material_css.html' %}
+        {% include 'material/includes/material_js.html' %}
 
     </head>
 
     <body class="{% block body_class %}{% endblock %}">
+
         <div class="container">
         {% wagtailuserbar %}
 
@@ -56,7 +61,6 @@
         {# Global javascript #}
         <script type="text/javascript" src="{% static 'js/oee.js' %}"></script>
         <!-- Compiled and minified JavaScript -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 
         {% block extra_js %}
             {# Override this in templates to add extra javascript #}
